[Unrated] Title: [모의 SW 역량테스트] 특이한 자석, Time: 124 ms, Memory: 20,832 KB -BaekjoonHub